--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.1.0",
     "debug": "~2.6.9",
     "express": "^4.19.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.5.0",
     "morgan": "~1.9.1",
     "pug": "^3.0.3"
   }
